--- a/requirements.txt
+++ b/requirements.txt
@@ -1,130 +1,76 @@
- HEAD
-annotated-types0.7.0
-anyio4.9.0
-attrs21.2.0
-Automat20.2.0
-Babel2.8.0
-bcrypt3.2.0
-blinker1.9.0
-certifi2020.6.20
-chardet4.0.0
-click8.2.1
-cloud-init24.4.1
-colorama0.4.4
-command-not-found0.3
-configobj5.0.6
-constantly15.1.0
-cryptography3.4.8
-dbus-python1.2.18
-distro1.7.0
-distro-info==1.1.0
-exceptiongroup1.3.0
-fastapi0.115.12
-filelock3.18.0
-Flask3.1.1
-flask-cors6.0.1
-fsspec2025.5.1
-gunicorn23.0.0
-h110.16.0
-hf-xet1.1.4
-httpcore1.0.9
-httplib20.20.2
-httpx0.28.1
-huggingface-hub0.33.0
-hyperlink21.0.0
-idna3.3
-importlib-metadata4.6.4
-incremental21.3.0
-itsdangerous2.2.0
-jeepney0.7.1
-Jinja23.1.6
-jiter0.10.0
-joblib1.5.1
-jsonpatch1.32
-jsonpointer2.0
-jsonschema3.2.0
-keyring==23.5.0
-launchpadlib==1.10.16
-lazr.restfulclient==0.14.4
-lazr.uri==1.0.6
+annotated-types==0.7.0
+anyio==4.9.0
+attrs==21.2.0
+Automat==20.2.0
+Babel==2.8.0
+bcrypt==3.2.0
+blinker==1.9.0
+certifi==2020.6.20
+chardet==4.0.0
+click==8.2.1
+colorama==0.4.4
+constantly==15.1.0
+cryptography==3.4.8
+distro==1.7.0
+exceptiongroup==1.3.0
+fastapi==0.115.12
+filelock==3.18.0
+Flask==3.1.1
+flask-cors==6.0.1
+fsspec==2025.5.1
+gunicorn==23.0.0
+h11==0.16.0
+httpcore==1.0.9
+httplib2==0.20.2
+httpx==0.28.1
+huggingface-hub==0.33.0
+hyperlink==21.0.0
+idna==3.3
+importlib-metadata==4.6.4
+incremental==21.3.0
+itsdangerous==2.2.0
+Jinja2==3.1.6
+joblib==1.5.1
+jsonpatch==1.32
+jsonpointer==2.0
+jsonschema==3.2.0
 MarkupSafe==3.0.2
 more-itertools==8.10.0
 mpmath==1.3.0
 netifaces==0.11.0
 networkx==3.4.2
 numpy==2.2.6
-nvidia-cublas-cu12==12.6.4.1
-nvidia-cuda-cupti-cu12==12.6.80
-nvidia-cuda-nvrtc-cu12==12.6.77
-nvidia-cuda-runtime-cu12==12.6.77
-nvidia-cudnn-cu12==9.5.1.17
-nvidia-cufft-cu12==11.3.0.4
-nvidia-cufile-cu12==1.11.1.6
-nvidia-curand-cu12==10.3.7.77
-nvidia-cusolver-cu12==11.7.1.2
-nvidia-cusparse-cu12==12.5.4.2
-nvidia-cusparselt-cu12==0.6.3
-nvidia-nccl-cu12==2.26.2
-nvidia-nvjitlink-cu12==12.6.85
-nvidia-nvtx-cu12==12.6.77
 oauthlib==3.2.0
 openai==1.82.0
 packaging==25.0
 pillow==11.2.1
 pyasn1==0.4.8
 pyasn1-modules==0.2.1
-pycairo==1.20.1
-pycurl==7.44.1
-pydantic==2.11.5
-pydantic_core==2.33.2
-PyGObject==3.42.1
-PyHamcrest==2.0.2
-PyJWT==2.3.0
-pyOpenSSL==21.0.0
 pyparsing==2.4.7
 pyrsistent==0.18.1
 pyserial==3.5
-python-apt==2.4.0+ubuntu4
 python-dotenv==1.1.0
 pytz==2022.1
 PyYAML==5.4.1
 regex==2024.11.6
 requests==2.25.1
-safetensors==0.5.3
 scikit-learn==1.6.1
 scipy==1.15.3
-SecretStorage==3.3.1
 sentence-transformers==4.1.0
-service-identity==18.1.0
 six==1.16.0
 sniffio==1.3.1
 starlette==0.46.2
 sympy==1.14.0
-systemd-python==234
 threadpoolctl==3.6.0
 tokenizers==0.21.1
 torch==2.7.1
 tqdm==4.67.1
 transformers==4.52.4
 triton==3.3.1
-Twisted==22.1.0
 typing-inspection==0.4.1
 typing_extensions==4.13.2
-ubuntu-pro-client==8001
-ufw==0.36.1
-unattended-upgrades==0.1
 urllib3==1.26.5
 uvicorn==0.34.2
-wadllib==1.3.6
 Werkzeug==3.1.3
 zipp==1.0.0
-zope.interface==5.4.0
-=======
-flask
-gunicorn
-numpy
-pandas
-scikit-learn
 
-
->>>>>>> f17b030181c00c62d0e65cfa071b3796d22c2d0d
