--- a/requirements.txt
+++ b/requirements.txt
@@ -1,77 +1,8 @@
-Cython>=0.29.21
-annotated-types==0.7.0
-anyio==4.9.0
-attrs==21.2.0
-Automat==20.2.0
-Babel==2.8.0
-bcrypt==3.2.0
-blinker==1.9.0
-certifi==2020.6.20
-chardet==4.0.0
-click==8.2.1
-colorama==0.4.4
-constantly==15.1.0
-cryptography==3.4.8
-distro==1.7.0
-exceptiongroup==1.3.0
-fastapi==0.115.12
-filelock==3.18.0
 Flask==3.1.1
 flask-cors==6.0.1
-fsspec==2025.5.1
 gunicorn==23.0.0
-h11==0.16.0
-httpcore==1.0.9
-httplib2==0.20.2
-httpx==0.28.1
-huggingface-hub==0.33.0
-hyperlink==21.0.0
-idna==3.3
-importlib-metadata==4.6.4
-incremental==21.3.0
-itsdangerous==2.2.0
-Jinja2==3.1.6
-joblib==1.5.1
-jsonpatch==1.32
-jsonpointer==2.0
-jsonschema==3.2.0
-MarkupSafe==3.0.2
-more-itertools==8.10.0
-mpmath==1.3.0
-netifaces==0.11.0
-networkx==3.4.2
-numpy==2.2.6
-oauthlib==3.2.0
-openai==1.82.0
-packaging==25.0
-pillow==11.2.1
-pyasn1==0.4.8
-pyasn1-modules==0.2.1
-pyparsing==2.4.7
-pyrsistent==0.18.1
-pyserial==3.5
-python-dotenv==1.1.0
-pytz==2022.1
-PyYAML==5.4.1
-regex==2024.11.6
-requests==2.25.1
-scikit-learn==1.6.1
-scipy==1.15.3
-sentence-transformers==4.1.0
-six==1.16.0
-sniffio==1.3.1
-starlette==0.46.2
-sympy==1.14.0
-threadpoolctl==3.6.0
-tokenizers==0.21.1
-torch==2.7.1
-tqdm==4.67.1
-transformers==4.52.4
-triton==3.3.1
-typing-inspection==0.4.1
-typing_extensions==4.13.2
-urllib3==1.26.5
-uvicorn==0.34.2
-Werkzeug==3.1.3
-zipp==1.0.0
+numpy==1.26.4
+pandas==2.2.2
+scikit-learn==1.4.2
+sentence-transformers==2.6.1
 
