--- a/requirements.txt
+++ b/requirements.txt
@@ -2,7 +2,6 @@ Flask==3.1.1
 flask-cors==4.0.0
 gunicorn==20.1.0
 numpy==1.24.4
-pandas==1.5.3
-scikit-learn==1.2.2
 sentence-transformers==2.2.2
+huggingface_hub==0.15.1
 
